Spacing fix

--- a/css/index.css
+++ b/css/index.css
@@ -53,7 +53,8 @@ header, details, main {
 }
 
 header {
-  padding-top: 1em;
+  padding-top: 2em;
+  
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -124,5 +125,16 @@ main > section:first-child {
   body {
     font-size: 80%;
     line-height: 1.15;
+  }
+}
+
+
+/***
+ * Small screens
+ */
+
+@media (max-width: 414px) {
+  ul {
+    padding-left: 0;
   }
 }
